--- a/grow.html
+++ b/grow.html
@@ -1,55 +1,104 @@
-<script>
-  const eventUTC = new Date(Date.UTC(2025, 7, 23, 2, 0, 0)); // 2:00 PM NZST
-  const eventLink = "https://www.roblox.com/events/1412207234460156417";
-
-  const title = document.getElementById("title");
-  const subtitle = document.getElementById("subtitle");
-  const description = document.getElementById("description");
-  const localTime = document.getElementById("localTime");
-  const countdown = document.getElementById("countdown");
-  const button = document.getElementById("eventButton");
-
-  let currentLang = "en";
-
-  function formatLocalTime(date) {
-    return date.toLocaleString(currentLang === "vi" ? "vi-VN" : currentLang + "-US", {
-      weekday: "short",
-      year: "numeric",
-      month: "short",
-      day: "numeric",
-      hour: "2-digit",
-      minute: "2-digit",
-      timeZoneName: "short"
-    });
-  }
-
-  function updateCountdown() {
-    const now = new Date();
-    const diff = eventUTC - now;
-
-    if (diff <= 0) {
-      countdown.textContent = translations[currentLang].buttonAfter;
-      button.textContent = translations[currentLang].buttonAfter;
-      button.onclick = () => window.open(eventLink, "_blank");
-    } else {
-      const hours = Math.floor(diff / 1000 / 60 / 60);
-      const minutes = Math.floor((diff / 1000 / 60) % 60);
-      const seconds = Math.floor((diff / 1000) % 60);
-      countdown.textContent = `⏳ ${hours}h ${minutes}m ${seconds}s`;
-      button.textContent = translations[currentLang].buttonBefore;
-      button.onclick = () => alert(translations[currentLang].alert);
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>⚔️ ADMIN WAR Event</title>
+  <style>
+    body {
+      background: #f0f2f5;
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      padding: 40px;
     }
-  }
+    .event-box {
+      max-width: 500px;
+      margin: auto;
+      background: #fff;
+      border-radius: 16px;
+      box-shadow: 0 6px 16px rgba(0,0,0,0.1);
+      padding: 24px;
+      text-align: center;
+    }
+    .event-box img {
+      width: 100%;
+      border-radius: 12px;
+      margin-bottom: 16px;
+    }
+    .event-box h1 {
+      font-size: 28px;
+      margin-bottom: 8px;
+      color: #222;
+    }
+    .event-box p {
+      font-size: 16px;
+      color: #555;
+      margin-bottom: 12px;
+    }
+    .event-time {
+      font-size: 15px;
+      color: #888;
+      margin-bottom: 20px;
+    }
+    .event-box button {
+      display: block;
+      width: 100%;
+      padding: 12px;
+      font-size: 16px;
+      border: none;
+      border-radius: 8px;
+      margin-bottom: 12px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+    .join-event {
+      background-color: #ff4757;
+      color: white;
+    }
+    .join-event:hover {
+      background-color: #e8413c;
+    }
+    .play-game {
+      background-color: #2ecc71;
+      color: white;
+    }
+    .play-game:hover {
+      background-color: #27ae60;
+    }
+  </style>
+</head>
+<body>
+  <div class="event-box">
+    <img src="https://tr.rbxcdn.com/180DAY-6560206fd96c3f9b56725fb116db4d5a/768/432/Image/Webp/noFilter" alt="Admin War Event">
+    <h1>⚔️ ADMIN WAR ⚔️</h1>
+    <p><strong>Admin War + Beanstalk Pt. 2</strong></p>
+    <p>Join the game dressed as a green bean to experience epic admin abuse, wild weather, rewards, mutations, and more... 🫛🫛🫛</p>
+    <div class="event-time" id="localTime"></div>
+    <button class="join-event" onclick="window.open('https://www.roblox.com/events/1412207234460156417', '_blank')">
+      🔥 Join Event
+    </button>
+    <button class="play-game" onclick="window.open('https://www.roblox.com/games/126884695634066/Grow-a-Garden', '_blank')">
+      🎮 Play Game
+    </button>
+  </div>
 
-  function setLang(lang) {
-    currentLang = lang;
-    title.textContent = translations[lang].title;
-    subtitle.textContent = translations[lang].subtitle;
-    description.innerHTML = translations[lang].description;
-    localTime.innerHTML = `${translations[lang].timeLabel} <strong>${formatLocalTime(eventUTC)}</strong>`;
-    updateCountdown();
-  }
+  <script>
+    const eventUTC = new Date(Date.UTC(2025, 7, 23, 2, 0, 0)); // 2:00 PM NZST
+    const localTime = document.getElementById("localTime");
 
-  setLang(currentLang);
-  setInterval(updateCountdown, 1000);
-</script>
+    function formatLocalTime(date) {
+      return date.toLocaleString(undefined, {
+        weekday: 'long',
+        year: 'numeric',
+        month: 'long',
+        day: 'numeric',
+        hour: '2-digit',
+        minute: '2-digit',
+        timeZoneName: 'short'
+      });
+    }
+
+    localTime.innerHTML = `📅 Local time: <strong>${formatLocalTime(eventUTC)}</strong>`;
+  </script>
+</body>
+</html>
